# AlphaTools

./: .gitignore  AlphaTest.cmake  CMakeLists.txt  Doxyfile  README.md  alpha_utils  appveyor.yml  arrays.h  arrays.tpp  io.cpp  io.h  io.tpp
docs/: DoxygenLayout.xml  customstyle.css  header.html
include/: alpha_utils  argparser.h  at_logging  at_macros  at_math  at_reflect  at_tests  at_utils  console.h  format.h  generic.h  types.h
include/logging/: handler.h  level.h  logger.h  logger.tpp  logging.h
include/macros/: static_block.h  utils.h  variadic.h
include/math/: matrix.h  matrix.tpp  sphere.h  sphere.tpp  vector.h  vector.tpp
include/network/: socket.cpp  socket.h
include/reflection/: caster.h  caster.tpp  constructor.h  constructor.tpp  declare_types.h  destructor.h  destructor.tpp  errors.h  member_func.h  member_func.tpp  member_prop.h  member_prop.tpp  static_func.h  static_func.tpp  static_prop.h  static_prop.tpp  type.h  type.tpp  variant.h  variant.tpp
include/tests/: abstract_test.h  assertion.h  assertion.tpp  errors.h  test.h  test.tpp  test_case.h  test_case.tpp
include/utils/: algorithms.h  arrays.h  arrays.tpp  bytes.h  bytes.tpp  format.h  format.tpp  io.h  io.tpp  memory.h  memory.tpp  sfinae.h  sfinae.tpp  strmanip.h  strmanip.tpp
src/: argparser.cpp  console.cpp  format.cpp  generic.cpp
src/logging/: handler.cpp  level.cpp  logger.cpp  logging.cpp
src/math/: sphere.cpp  vector.cpp
src/network/: socket.cpp
src/reflection/: caster.cpp  constructor.cpp  declare_types.cpp  destructor.cpp  errors.cpp  member_func.cpp  member_prop.cpp  static_func.cpp  static_prop.cpp  type.cpp  variant.cpp
src/tests/: abstract_test.cpp  assertion.cpp  errors.cpp  test.cpp  test_case.cpp
src/utils/: algorithms.cpp  arrays.h  bytes.cpp  bytes.h  bytes.tpp  format.cpp  io.tpp  strings.cpp  strings.h  strmanip.cpp
tests/: main.cpp  test.cpp  test.h  test_algorithms.cpp  test_algorithms.h  test_argparse.cpp  test_argparse.h  test_arrays.cpp  test_arrays.h  test_bytes.cpp  test_bytes.h  test_console.cpp  test_console.h  test_format.cpp  test_format.h  test_generic.cpp  test_generic.h  test_io.cpp  test_io.h  test_logging.cpp  test_logging.h  test_macros.cpp  test_macros.h  test_matrix.cpp  test_memory.cpp  test_memory.h  test_sfinae.cpp  test_sfinae.h  test_socket.cpp  test_socket.h  test_strmanip.cpp  test_strmanip.h  test_test.cpp  test_test.h
tests/logging/: test_level.cpp  test_level.h  test_logging.h
tests/math/: test_matrix.cpp  test_matrix.h  test_sphere.cpp  test_sphere.h  test_vector.cpp  test_vector.h
tests/reflection/: test_constructor.cpp  test_constructor.h  test_reflection.cpp  test_reflection.h  test_type.cpp  test_type.h
tests/resources/: test1.txt  test3.txt
